// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar #render component with or without an image (1) 1`] = `
<gux-avatar-beta>
  <mock:shadow-root>
    <div class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with or without an image (2) 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with or without an image (3) 1`] = `
<gux-avatar-beta>
  <mock:shadow-root>
    <div class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <slot name="image"></slot>
      </div>
    </div>
  </mock:shadow-root>
  <img slot="image" src="https://i.pravatar.cc/300">
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with or without an image (4) 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <slot name="image"></slot>
      </div>
    </div>
  </mock:shadow-root>
  <img slot="image" src="https://i.pravatar.cc/300">
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "1" 1`] = `
<gux-avatar-beta accent="1" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-1">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "2" 1`] = `
<gux-avatar-beta accent="2" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-2">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "3" 1`] = `
<gux-avatar-beta accent="3" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-3">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "4" 1`] = `
<gux-avatar-beta accent="4" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-4">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "5" 1`] = `
<gux-avatar-beta accent="5" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-5">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "6" 1`] = `
<gux-avatar-beta accent="6" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-6">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "7" 1`] = `
<gux-avatar-beta accent="7" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-7">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "8" 1`] = `
<gux-avatar-beta accent="8" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-8">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "9" 1`] = `
<gux-avatar-beta accent="9" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-9">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "10" 1`] = `
<gux-avatar-beta accent="10" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-10">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "11" 1`] = `
<gux-avatar-beta accent="11" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-11">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "12" 1`] = `
<gux-avatar-beta accent="12" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-12">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "auto" 1`] = `
<gux-avatar-beta accent="auto" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-3">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "default" 1`] = `
<gux-avatar-beta accent="default" name="John Doe">
  <mock:shadow-root>
    <div aria-label="John Doe" class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials">
          JD
        </div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "large" 1`] = `
<gux-avatar-beta size="large">
  <mock:shadow-root>
    <div class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium" 1`] = `
<gux-avatar-beta size="medium">
  <mock:shadow-root>
    <div class="available gux-avatar gux-medium">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "small" 1`] = `
<gux-avatar-beta size="small">
  <mock:shadow-root>
    <div class="available gux-avatar gux-small">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "xsmall" 1`] = `
<gux-avatar-beta size="xsmall">
  <mock:shadow-root>
    <div class="available gux-avatar gux-xsmall">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different statuses should work as expected for "available" 1`] = `
<gux-avatar-beta status="available">
  <mock:shadow-root>
    <div class="available gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different statuses should work as expected for "break" 1`] = `
<gux-avatar-beta status="break">
  <mock:shadow-root>
    <div class="break gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different statuses should work as expected for "busy" 1`] = `
<gux-avatar-beta status="busy">
  <mock:shadow-root>
    <div class="busy gux-avatar gux-large">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different statuses should work as expected for "notifications" 1`] = `
<gux-avatar-beta status="notifications">
  <mock:shadow-root>
    <div class="gux-avatar gux-large notifications">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different statuses should work as expected for "offline" 1`] = `
<gux-avatar-beta status="offline">
  <mock:shadow-root>
    <div class="gux-avatar gux-large offline">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different statuses should work as expected for "out-of-office" 1`] = `
<gux-avatar-beta status="out-of-office">
  <mock:shadow-root>
    <div class="gux-avatar gux-large out-of-office">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different statuses should work as expected for "queue" 1`] = `
<gux-avatar-beta status="queue">
  <mock:shadow-root>
    <div class="gux-avatar gux-large queue">
      <div aria-hidden="true" class="content gux-accent-default">
        <div class="initials"></div>
      </div>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;
